--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>WTG</title>
+  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" >
   <link rel="stylesheet" type="text/css" href="css/style.css" >
   <script src="bower_components/requirejs/require.js"></script>
   <script>
@@ -17,7 +18,8 @@
       backbone: '../bower_components/backbone/backbone',
       handlebars: '../bower_components/handlebars/handlebars',
       text: '../bower_components/requirejs-text/text',
-      chaplin: '../bower_components/chaplin/chaplin'
+      chaplin: '../bower_components/chaplin/chaplin',
+      bootstrap: '../bower_components/bootstrap/dist/js/bootstrap.min.js'
     },
     // Underscore and Backbone are not AMD-capable per default,
     // so we need to use the AMD wrapping of RequireJS
@@ -44,5 +46,8 @@
   });
   </script>
 </head>
-<body></body>
+<body>
+  
+
+</body>
 </html>
