some login try web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>WTG</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css" >
+    <link rel="stylesheet" type="text/css" href="css/style.css" >
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" >
   <script src="bower_components/requirejs/require.js"></script>
   <script>
   // Configure the AMD module loader
