Added requirejs-plugins. Added google maps API & map

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       backbone: '../bower_components/backbone/backbone',
       handlebars: '../bower_components/handlebars/handlebars',
       text: '../bower_components/requirejs-text/text',
+      async: '../bower_components/requirejs-plugins/src/async',
       chaplin: '../bower_components/chaplin/chaplin',
       bootstrap: '../bower_components/bootstrap/dist/js/bootstrap.min',
       serializeObject: 'lib/serializeObject.jquery'
