--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>WTG</title>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-datepicker/css/datepicker3.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     
     <script src="bower_components/requirejs/require.js"></script>
@@ -18,11 +19,13 @@
       jquery: '../bower_components/jquery/jquery',
       underscore: '../bower_components/lodash/dist/lodash',
       backbone: '../bower_components/backbone/backbone',
+      moment: '../bower_components/moment/min/moment.min',
       handlebars: '../bower_components/handlebars/handlebars',
       text: '../bower_components/requirejs-text/text',
       async: '../bower_components/requirejs-plugins/src/async',
       chaplin: '../bower_components/chaplin/chaplin',
       bootstrap: '../bower_components/bootstrap/dist/js/bootstrap.min',
+      bootstrapDatepicker: '../bower_components/bootstrap-datepicker/js/bootstrap-datepicker',
       serializeObject: 'lib/serializeObject.jquery'
     },
     // Underscore and Backbone are not AMD-capable per default,
@@ -37,6 +40,9 @@
       },
       bootstrap: {
         deps: ['jquery']
+      },
+      bootstrapDatepicker: {
+        deps: ['bootstrap', 'jquery']
       },
       serializeObject: {
         deps: ['jquery']
