--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>WTG</title>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     
     <script src="bower_components/requirejs/require.js"></script>
@@ -19,10 +20,12 @@
       underscore: '../bower_components/lodash/dist/lodash',
       backbone: '../bower_components/backbone/backbone',
       handlebars: '../bower_components/handlebars/handlebars',
+      moment: '../bower_components/moment/moment',
       text: '../bower_components/requirejs-text/text',
       async: '../bower_components/requirejs-plugins/src/async',
       chaplin: '../bower_components/chaplin/chaplin',
       bootstrap: '../bower_components/bootstrap/dist/js/bootstrap.min',
+      DTPicker: '../bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min',
       serializeObject: 'lib/serializeObject.jquery'
     },
     // Underscore and Backbone are not AMD-capable per default,
@@ -37,6 +40,9 @@
       },
       bootstrap: {
         deps: ['jquery']
+      },
+      DTPicker: {
+        deps: ['jquery', 'moment']
       },
       serializeObject: {
         deps: ['jquery']
